    specify a different format for indexes than the one used elsewhere. If this
    variable is not defined., it'll use the dateformat by default.
  - Made the index by date compare dates independently of the value of dateformat.

 Jose Kahan (Aug  13, 2003)
  - Made the Received on footnote line use the same date format as that used for the
    Date: header on top of the messages.

 Jose Kahan (Aug  13, 2003)
  - Add the <title> WAI enhancement that I had forgotten to do for messages.
    The new format is: [subject] from [author] on [date] ([mailing list label]).
    I also removed the 64 characters maximum limit check we had on the title.
    The reason is that this is not part of the HTML specification, but rather
    a writing style. Dominique says we shouldn't be so strict in this case. In
    addition, just adding a \0 after 64 characters could break entity names and
    generate invalid HTML.

 Jose Kahan (Aug  13, 2003)
  - The mailcommand option didn't work when applied to a paragraph that had
    a previously converted href string that includes the '@' char. I added
    a quick hack to ConvURlsString to avoid doing the mailto: convertion if an href
    already exists in that line. The best solution would be to do something 
    similar to ConvURLsWithHrefs.
    Also fixed a memory leak.

 Peter McCluskey (Aug 8, 2003)
  - Applied haof fixes from Bernhard Reiter.

 Jose Kahan (Aug  4, 2003)
  - As a side effect of PNK's use of an SGML entity for the @ char, the 
    mailcommand option stopped working on all the headers except for
    the To: one.

 Jose Kahan (Aug  1, 2003)
  - In order to guarantee the validity of XHTML documents, changed the
    behavior of hypermail when including customized footers. Previously,
    when using this option, the custom markup had to include the </body>
    and </html> end tags. As we also need to include a </div> in some
    cases for XHTML and it's much harder to guess when to add it, I